# onlyshadow

./: Dockerfile  README.md  docker-entrypoint.sh  test_meta_ads_client.py  test_notifications.py  test_rate_limiter.py  test_rate_limiter_standalone.py  test_sso_saml_standalone.py  test_sso_service.py  vercel.json
ssi-shadow/: .env.example  Dockerfile.production  Makefile  SYSTEM_CAPABILITIES.md  deploy_bq.sh  docker-compose.dev.yml  docker-compose.yml  playwright.config.ts  pyproject.toml  requirements.txt  setup.sh  test_dashboard_service.py  test_tiktok_ads_client.py  vercel.json  vitest.config.ts
ssi-shadow/.github/: dependabot.yml
ssi-shadow/.github/workflows/: security.yml
ssi-shadow/ads_engine/: __init__.py  ai_ads_engine.py  cross_platform_launcher.py  dynamic_landing_pages.py  google_ads_client.py  google_ads_integration.py  groas_system.py  meta_api_integration.py  plai_style_engine.py  tiktok_ads_client.py  tiktok_ads_engine.py
ssi-shadow/api/: gateway.py  main.py
ssi-shadow/api/middleware/: auth.py  error_handler.py
ssi-shadow/api/routes/: auth.py  dashboard.py  health.py
ssi-shadow/api/services/: __init__.py  dashboard_service.py
ssi-shadow/attribution/: __init__.py  attribution_orchestrator.py
ssi-shadow/auth/middleware/: permissions.py
ssi-shadow/auth/models/: __init__.py  entities.py
ssi-shadow/auth/services/: organization_service.py  team_api_key_service.py
ssi-shadow/automation/: __init__.py  ax_optimizer.py  budget_applier.py  weather_bid_applier.py  weather_bidder.py
ssi-shadow/bigquery/: README.md  multi_touch_attribution.sql
ssi-shadow/bigquery/ml/: README.md
ssi-shadow/bigquery/procedures/: compute_user_profiles.sql  stitch_identities_old.sql  stitch_identities_v2.sql  update_features.sql
ssi-shadow/bigquery/schemas/: events_schema.json  identity_graph.sql  schema.sql
ssi-shadow/cdp/: __init__.py  customer_data_platform.py
ssi-shadow/core/: logging.py  retry.py
ssi-shadow/dashboard/: index.html  tailwind.config.js  vite.config.ts
ssi-shadow/dbt/: dbt_project.yml
ssi-shadow/docs/: API_REFERENCE.md  CONVERGENCE_GAPS_COMPLETE.md
ssi-shadow/experiments/: __init__.py
ssi-shadow/functions/: __init__.py  main.py  pubsub_consumer.py
ssi-shadow/intelligence/: __init__.py  competitor_scraper.py  copy_architect.py  vision_api.py
ssi-shadow/ml/: __init__.py
ssi-shadow/monitoring/: __init__.py  logging_config.py  observability.py  tracing.py
ssi-shadow/privacy/: clean_room.py
ssi-shadow/shadow/: engine.py  engine_v2.py  requirements.txt
ssi-shadow/tenant/: tenant.py
ssi-shadow/tests/: README.md  package.json  setup.ts
ssi-shadow/webhooks/: __init__.py
(+214 files in other folders)
