[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssi-shadow"
version = "2.0.0"
description = "Server-Side Integration Shadow - Advanced tracking and attribution platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SSI Shadow Team", email = "team@ssi-shadow.io"}
]
keywords = [
    "tracking", "attribution", "marketing", "ads",
    "meta", "tiktok", "google", "analytics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "jinja2>=3.1.0",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
]
gcp = [
    "google-cloud-bigquery>=3.14.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-pubsub>=2.19.0",
]
full = [
    "ssi-shadow[dev,ml,gcp]",
]

[project.urls]
Homepage = "https://github.com/ssi-shadow/ssi-shadow"
Documentation = "https://docs.ssi-shadow.io"
Repository = "https://github.com/ssi-shadow/ssi-shadow"

[project.scripts]
ssi-shadow = "api.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "shadow*",
    "api*",
    "auth*",
    "webhooks*",
    "ads_engine*",
    "ml*",
    "monitoring*",
    "cdp*",
    "attribution*",
    "integrations*",
    "intelligence*",
    "personalization*",
    "privacy*",
    "automation*",
    "experiments*",
    "functions*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=. --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
